Fix spacing between impact and tooltip

--- a/src/components/common/DestinationValue/DestinationValue.pcss
+++ b/src/components/common/DestinationValue/DestinationValue.pcss
@@ -3,8 +3,16 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	gap: var(--sp-xs);
+	gap: var(--sp-sm);
 	position: relative;
+}
+
+.dest_value_info {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: var(--sp-xs);
 }
 
 .dest_value_indicator span {
