--- a/src/components/common/Token/NativeInfo/NativeInfo.pcss
+++ b/src/components/common/Token/NativeInfo/NativeInfo.pcss
@@ -19,3 +19,7 @@
 	color: var(--color-grey-300);
 	line-height: 18px;
 }
+
+.info_icon_wrapper:hover svg path {
+	fill: var(--color-grey-700);
+}
